# internal/docs/swagger.yaml
@@ -5,8 +5,6 @@ definitions:
         additionalProperties:
           type: string
         type: object
-      created_by:
-        type: integer
       is_static:
         type: boolean
       parent_id:
@@ -53,16 +51,62 @@ definitions:
           type: string
         type: object
     type: object
+  entity.CreatePostRequest:
+    properties:
+      content:
+        additionalProperties:
+          type: string
+        type: object
+      short_content:
+        additionalProperties:
+          type: string
+        type: object
+      slug:
+        type: string
+      status:
+        type: boolean
+      title:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: integer
+    type: object
+  entity.CreatePostResponse:
+    properties:
+      content:
+        additionalProperties:
+          type: string
+        type: object
+      files:
+        items:
+          type: string
+        type: array
+      id:
+        type: integer
+      short_content:
+        additionalProperties:
+          type: string
+        type: object
+      slug:
+        type: string
+      status:
+        type: boolean
+      title:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: integer
+    type: object
   entity.CreateUserRequest:
     properties:
-      created_by:
-        type: integer
       password:
         type: string
       role:
         type: string
       status:
-        type: string
+        type: boolean
       username:
         type: string
     type: object
@@ -75,7 +119,7 @@ definitions:
       role:
         type: string
       status:
-        type: string
+        type: boolean
       username:
         type: string
     type: object
@@ -84,18 +128,15 @@ definitions:
       message:
         type: string
     type: object
-  entity.DeleteUserResponse:
+  entity.DeletePostResponse:
     properties:
       message:
         type: string
     type: object
-  entity.FileUploadRequest:
+  entity.DeleteUserResponse:
     properties:
-      category:
+      message:
         type: string
-      object_id:
-        description: File     multipart.File `json:"file"`
-        type: integer
     type: object
   entity.FileUploadResponse:
     properties:
@@ -131,6 +172,33 @@ definitions:
           type: string
         type: object
     type: object
+  entity.GetPostResponse:
+    properties:
+      content:
+        additionalProperties:
+          type: string
+        type: object
+      files:
+        items:
+          type: string
+        type: array
+      id:
+        type: integer
+      short_content:
+        additionalProperties:
+          type: string
+        type: object
+      slug:
+        type: string
+      status:
+        type: boolean
+      title:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: integer
+    type: object
   entity.GetUserResponse:
     properties:
       id:
@@ -151,6 +219,15 @@ definitions:
       menus:
         items:
           $ref: '#/definitions/entity.GetMenuResponse'
+        type: array
+      total:
+        type: integer
+    type: object
+  entity.ListPostResponse:
+    properties:
+      menus:
+        items:
+          $ref: '#/definitions/entity.GetPostResponse'
         type: array
       total:
         type: integer
@@ -271,8 +348,6 @@ definitions:
         additionalProperties:
           type: string
         type: object
-      updated_by:
-        type: integer
     type: object
   entity.UpdateMenuResponse:
     properties:
@@ -303,6 +378,69 @@ definitions:
           type: string
         type: object
     type: object
+  entity.UpdatePostColumnsRequest:
+    properties:
+      fields:
+        additionalProperties:
+          type: string
+        type: object
+      id:
+        type: integer
+    type: object
+  entity.UpdatePostRequest:
+    properties:
+      content:
+        additionalProperties:
+          type: string
+        type: object
+      files:
+        items:
+          type: string
+        type: array
+      id:
+        type: integer
+      short_content:
+        additionalProperties:
+          type: string
+        type: object
+      slug:
+        type: string
+      status:
+        type: boolean
+      title:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: integer
+    type: object
+  entity.UpdatePostResponse:
+    properties:
+      content:
+        additionalProperties:
+          type: string
+        type: object
+      files:
+        items:
+          type: string
+        type: array
+      id:
+        type: integer
+      short_content:
+        additionalProperties:
+          type: string
+        type: object
+      slug:
+        type: string
+      status:
+        type: boolean
+      title:
+        additionalProperties:
+          type: string
+        type: object
+      user_id:
+        type: integer
+    type: object
   entity.UpdateUserColumnsRequest:
     properties:
       fields:
@@ -321,9 +459,7 @@ definitions:
       role:
         type: string
       status:
-        type: string
-      updated_by:
-        type: integer
+        type: boolean
       username:
         type: string
     type: object
@@ -338,7 +474,7 @@ definitions:
       role:
         type: string
       status:
-        type: string
+        type: boolean
       username:
         type: string
     type: object
@@ -384,7 +520,7 @@ paths:
       summary: Login
       tags:
       - auth
-  /v1/auth/new-access/:refresh:
+  /v1/auth/new-access/{refresh}:
     get:
       consumes:
       - application/json
@@ -462,12 +598,16 @@ paths:
         name: file
         required: true
         type: file
-      - description: File Upload Model
-        in: body
-        name: request
+      - description: Category
+        in: query
+        name: category
         required: true
-        schema:
-          $ref: '#/definitions/entity.FileUploadRequest'
+        type: string
+      - description: Object ID
+        in: query
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -735,6 +875,235 @@ paths:
       summary: Get List Menu
       tags:
       - menu
+  /v1/post:
+    patch:
+      consumes:
+      - application/json
+      description: This API for updating a post columns
+      parameters:
+      - description: Update Post Columns Model
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/entity.UpdatePostColumnsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.UpdatePostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - BearerAuth: []
+      summary: Update Post Columns
+      tags:
+      - post
+    post:
+      consumes:
+      - application/json
+      description: This API for creating a new post
+      parameters:
+      - description: Create Post Model
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/entity.CreatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/entity.CreatePostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - BearerAuth: []
+      summary: Create Post
+      tags:
+      - post
+    put:
+      consumes:
+      - application/json
+      description: This API for updating a post
+      parameters:
+      - description: Update Post Model
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/entity.UpdatePostRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.UpdatePostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - BearerAuth: []
+      summary: Update Post
+      tags:
+      - post
+  /v1/post/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: This API for deleting post with id
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.DeletePostResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - BearerAuth: []
+      summary: Delete Post
+      tags:
+      - post
+    get:
+      consumes:
+      - application/json
+      description: This API for getting list with id
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.GetPostResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      summary: Get Post
+      tags:
+      - post
+  /v1/post/list:
+    get:
+      consumes:
+      - application/json
+      description: This API for getting list post
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.ListPostResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      summary: List Post
+      tags:
+      - post
   /v1/site/menu/list:
     get:
       consumes:
